	sections to be combined in the incorrect order.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Added support for section IDs to 'Profile'.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'Profile::setSource(const QString &,QString *err_msg)'
	method to 'Profile::loadFile(const QString &,QString *err_msg)'.
	* Added a 'Profile::loadDirectory()' method.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'dump_profile' test command.
2024-10-24 Fred Gleason <fredg@paravelsystems.com>
	* Renamed fixture data files using a more consistent scheme.
2024-10-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.1.0.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Added an overloaded 'Profile::loadDirectory()' method.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.0.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a but in 'Profile::loadDirectory()' that would fail when
	given an absolute directory path.
	* Added a 'Directory Load Absolute Path Test' test.
2024-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.1.
2024-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Sendmail' interface.
2024-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.3.0.
2024-11-12 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'Profile::loadDirectory(const QString &,QStringList *)'
	method to 'Profile::load(const QString &,QStringList *)'.
	* Fixed the 'Profile::dump()' method to properly handle multiple
	blocks with the same section type.
2024-11-12 Fred Gleason <fredg@paravelsystems.com>
	* Added dump tests to 'src/tests/run_tests.cpp'.
2024-11-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.0.0.
2024-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Profile::stringValue()' to truncate string values
	longer than 1024 bytes.